# premake_android_examples

./: README.md
example1/: README.md  premake5.lua
example1/android/: build.sh  local.properties  settings.gradle
example1/android/app/: build.gradle
example1/android/app/src/androidTest/java/com/example/jnifromvs/: ExampleInstrumentedTest.java
example1/android/app/src/main/: AndroidManifest.xml
example1/android/app/src/main/cpp/: native-lib.cpp
example1/android/app/src/main/java/com/example/jnifromvs/: MainActivity.java
example1/android/app/src/main/res/values/: strings.xml
example1/android/app/src/test/java/com/example/jnifromvs/: ExampleUnitTest.java
example1/android/gradle/wrapper/: gradle-wrapper.properties
example1/generated_files/vs2017/: MySolution.sln
example1/generated_files/vs2017/native-lib/: native-lib.vcxproj
example1/src/lib/: lib.cpp
example2/: README.md  premake5.lua
example2/cpp/: main.cpp
example2/generated_files/: README.md
example2/generated_files/android/: build.gradle  settings.gradle
example2/generated_files/android/app/: CMakeLists.txt  build.gradle
example2/manifest/: AndroidManifest.xml
example2/src/java/com/as/example/: MainActivity.java
example3/: README.md  premake5.lua
example3/generated_files/vs2017/: MySolution.sln
example3/generated_files/vs2017/ARM/Debug/: libnative-lib.so.recipe
example3/generated_files/vs2017/com.example.myapp/: com.example.myapp.androidproj
example3/generated_files/vs2017/native-lib/: native-lib.vcxproj
example3/src/cpp/lib/: lib.cpp
