cmake_minimum_required (VERSION 2.6)
project (app)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
add_library(app SHARED  C:/Users/emrekultursay/premake_android_examples/example2/src/cpp/main.cpp)
target_include_directories(app PUBLIC  C:/Users/emrekultursay/premake_android_examples/example2/src/h)
target_compile_options(app PUBLIC  -std=c++11)
target_link_libraries(app  log --no-undefined)
target_compile_definitions(app PUBLIC  DEBUG)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Release")
add_library(app SHARED  C:/Users/emrekultursay/premake_android_examples/example2/src/cpp/main.cpp)
target_include_directories(app PUBLIC  C:/Users/emrekultursay/premake_android_examples/example2/src/h)
target_compile_options(app PUBLIC  -std=c++11 -O3)
target_link_libraries(app  log --no-undefined)
target_compile_definitions(app PUBLIC  NDEBUG)
endif()